<resources>
    <string name="app_name">GassAppFireB</string>
    <string name="login">Login</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_estas_registrado_registrate">¿No estas registrado? Registrate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">menu</string>
    <string name="menu">menu</string>
    <string name="inicio">Inicio</string>
    <string name="acerca_de">Acerca de</string>
    <string name="cerrar_sesion">cerrar sesion</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="ayuda">Ayuda</string>
    <string name="gass_app">Gass App</string>
    <string name="logo">logo</string>
    <string name="configuraci_n_de_sensores">configuracion de sensores</string>
    <string name="agregar_sensor">Agregar Sensor</string>
    <string name="configuracion">Configuracion</string>
    <string name="sensores">Sensores</string>
    <string name="sensor_cocina">Sensor Cocina</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar_configuracion">Guardar Configuracion</string>
    <string name="nuestra_app">Nuestra App</string>
    <string name="esta_aplicaci_n_m_vil_est_dise_ada_para_ayudarte_a_gestionar_tus_necesidades_de_manera">Esta aplicacion movil esta diseñada para ayudarte a gestionar tus necesidades de manera</string>
    <string name="eficiente_aqu_hay_algunas_funcionalidades_que_puedes_explorar">eficiente aqui hay algunas funcionalidades que puedes explorar</string>
    <string name="configuraci_n_de_sensores_monitorea_y_ajusta_los_sensores_seg_n_tus_preferencias">configuracion de sensores monitorea y ajusta los sensores segun tus preferencias</string>
    <string name="alertas_recibe_notificaciones_importantes_sobre_eventos_relevantes">Recibe alertas o notificaciones importantes sobre eventos relevantes como una fuga de gas en su cocina</string>
    <string name="soporte_accede_a_la_secci_n_de_ayuda_para_resolver_cualquier_duda">accede a soporte la seccion de ayuda para resolver cualquier duda</string>
    <string name="configuraci_n_general_personaliza_la_aplicaci_n_seg_n_tus_necesidades">configuracion general personaliza la aplicacion segun tus necesidades</string>
    <string name="alerta_de_gasdetectada">alerta de gasdetectada</string>
    <string name="se_hadetectado_una_fuga_de_gas_en_el_sensor_cocina">se hadetectado una fuga de gas en el sensor cocina</string>
    <string name="contactar_emergencias">contactar emergencias</string>
    <string name="apagar_dispositivos_conectados">apagar dispositivos conectados</string>
    <string name="ventile_el_area_inmediatamente">ventile el area inmediatamente</string>
    <string name="estado_activo">estado activo</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
</resources>