<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.InicioFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@drawable/imag2"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuestra_app"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esta_aplicaci_n_m_vil_est_dise_ada_para_ayudarte_a_gestionar_tus_necesidades_de_manera"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eficiente_aqu_hay_algunas_funcionalidades_que_puedes_explorar"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuraci_n_de_sensores_monitorea_y_ajusta_los_sensores_seg_n_tus_preferencias"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertas_recibe_notificaciones_importantes_sobre_eventos_relevantes"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soporte_accede_a_la_secci_n_de_ayuda_para_resolver_cualquier_duda"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuraci_n_general_personaliza_la_aplicaci_n_seg_n_tus_necesidades"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="32dp" />


    </LinearLayout>

</FrameLayout>